<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/profilepp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="Nil Maharram"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="30dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/baseline_person_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/profileName"
        app:layout_constraintTop_toBottomOf="@id/profileName" />

    <TextView
        android:id="@+id/myCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="30dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/my_cart"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/outline_shopping_basket"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/profile"
        app:layout_constraintTop_toBottomOf="@id/profile" />

    <TextView
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="30dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/favourite"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/baseline_favorite"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/myCart"
        app:layout_constraintTop_toBottomOf="@id/myCart" />

    <TextView
        android:id="@+id/truck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="30dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/orders"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/baseline_shopping_cart"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/favourite"
        app:layout_constraintTop_toBottomOf="@id/favourite" />

    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="30dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/notifications"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/outline_notifications"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/truck"
        app:layout_constraintTop_toBottomOf="@id/truck" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="30dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/outline_settings"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/notification"
        app:layout_constraintTop_toBottomOf="@id/notification" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/settings"
        app:layout_constraintTop_toBottomOf="@id/settings" />

    <TextView
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="30dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/baseline_signout"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>