<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="230dp"
    android:layout_marginEnd="12dp"
    android:background="@drawable/card_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/jordan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bestSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="-4dp"
        android:text="@string/best_seller"
        android:textColor="@color/main"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/productName"
        app:layout_constraintTop_toBottomOf="@id/productImage" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/nike_jordan"
        android:textColor="@color/hint_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bestSeller" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/_302_00"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/productName" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonr_background"
        android:drawableBottom="@drawable/baseline_add"
        app:backgroundTint="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>